--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,20 +15,12 @@
     <string name="form_ip_error">Ip mal formada</string>
     <string name="form_connect_error">Fallo en la conexión</string>
     <string name="title_activity_drawer">DrawerActivity</string>
+    <string name="form_ip_not_discover">No se ha encontrado esa IPv4</string>
+    <string name="form_ip_exception">Fallo en la conexión, vuelva a intentarlo más tarde</string>
 
     <!--Navigation Drawer-->
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-
-    <string name="title_translate">Traductor</string>
-    <string name="title_joystick">Joystick</string>
-    <string name="title_info">Información</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_example">Example action</string>
+    <string name="navigation_drawer_open">Abrir menú lateral</string>
+    <string name="navigation_drawer_close">Cerrar menú lateral</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
