--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="backward">Atrás</string>
     <string name="left">Izquierda</string>
     <string name="right">Derecha</string>
+    <string name="shoot">Disparar</string>
+    <string name="set_speed">Asignar velocidad</string>
 
     <!-- form error -->
     <string name="form_empty_field">Campo obligatorio</string>
@@ -51,7 +53,11 @@
     <string name="color_sensor">Sensor de color: %1$s</string>
     <string name="ir_sensor">Sensor IR: %1$d</string>
     <string name="led_pattern">LED Pattern:</string>
-
+    
+    <!--Fragment To Speech-->
+    
+    <string name="insert_text_here">Inserte su texto aquí</string>
+    <string name="to_speech">To speech</string>
 
 
 <!-- TODO: Remove or change this joystick text -->
@@ -74,6 +80,9 @@
     <string name="color_s_white">Blanco</string>
     <string name="color_s_black">Negro</string>
     <string name="color_s_brown">Marrón</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 
