--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,15 +76,16 @@
 
 
     <!-- TODO: Remove or change this joystick text -->
-    <string name="front_lab">front_lab</string>
-    <string name="front_right_lab">front_right_lab</string>
-    <string name="right_lab">right_lab</string>
-    <string name="right_bottom_lab">right_bottom_lab</string>
-    <string name="bottom_lab">bottom_lab</string>
-    <string name="bottom_left_lab">bottom_left_lab</string>
-    <string name="left_lab">left_lab</string>
-    <string name="left_front_lab">left_front_lab</string>
-    <string name="center_lab">center_lab</string>
+    <string name="front_lab">Adelante</string>
+    <string name="front_right_lab">Adelante Derecha</string>
+    <string name="right_lab">Derecha</string>
+    <string name="right_bottom_lab">Atrás Derecha</string>
+    <string name="bottom_lab">Atrás</string>
+    <string name="bottom_left_lab">Atrás Izquierda</string>
+    <string name="left_lab">Izquierda</string>
+    <string name="left_front_lab">Adelante Izquierda</string>
+    <string name="center_lab">Centro</string>
+    <string name="perfect_center_lab">Centro Perfecto</string>
 
     <!--Colors Sensor-->
     <string name="color_s_none">Ninguno</string>
